Change history for django-templateselector
------------------------------------------
0.1.1
^^^^^^
* First release on PyPI.

0.1.0
^^^^^
* Initial development.